# basketball-data-index

./: .gitignore  AGENTS.md  README.md
csv/nba/: column_mapping.json  data_dictionary.csv
html/: debug_page.html  maravich-vs-irving.html
projects/db-viz/: README.md  app.py  pyproject.toml  requirements.txt
projects/db-viz/.streamlit/: config.toml
projects/db-viz/assets/: arena_geocodes.json  canned_queries.sql
projects/db-viz/lib/: court.py  db.py  filters.py  kpis.py  viz.py
projects/db-viz/pages/: 01_Home.py  02_Team_Profile.py  03_Player_Profile.py  04_Game_Center.py  05_Shot_Charts.py  06_PBP_Browser.py  07_Quarter_Splits.py  08_Officials.py  09_Odds_and_Betting.py  10_Schedule.py  11_Arenas.py  12_Season_Trends.py  13_Compare.py  14_SQL_Lab.py
projects/db-viz/tests/: conftest.py  test_compare_modes.py  test_lib_units.py  test_pages.py  test_queries.py
projects/pocketflow-chatbot/: .env.example  .gitignore  AGENTS.md  app.py  flow.py  main.py  nodes.py  pyproject.toml
projects/pocketflow-chatbot/docs/: design.md
projects/pocketflow-chatbot/prompts/: chat_responder_prompt.txt  error_analyzer_prompt.txt  intent_classifier_prompt.txt  preprocess_prompt.txt  query_planner_prompt.txt  result_analyzer_prompt.txt  sql_fixer_prompt.txt  sql_generator_prompt.txt  table_selector_prompt.txt
projects/pocketflow-chatbot/tests/: conftest.py  test_call_llm_structured.py  test_entry_points.py  test_flow_integration.py  test_nodes_error_recovery.py  test_nodes_preprocessing.py  test_nodes_response.py  test_nodes_schema_sql.py  test_snapshots.py  test_utils.py
projects/pocketflow-chatbot/tests/__snapshots__/: test_snapshots.ambr
projects/pocketflow-chatbot/utils/: __init__.py  call_llm.py  call_llm_structured.py  classify_error.py  execute_query.py  format_response_markdown.py  format_results_table.py  format_schema.py  get_full_schema.py  get_schema_subset.py  logging_setup.py  optimize_sql.py  validate_sql_safety.py
projects/test-db/: README.md  build.py  diag.py
